@@ -51,7 +51,7 @@ public class FinalDemoTest {
 			tested.say("world");
 			fail("Should throw AssertionError!");
 		} catch (AssertionError e) {
-			assertEquals("\n  Unexpected method call say(\"world\"):", e.getMessage());
+			assertEquals("\n  Unexpected method call FinalDemo.say(\"world\"):", e.getMessage());
 		}
 
 	}
@@ -73,7 +73,7 @@ public class FinalDemoTest {
 			tested.sayFinalNative("world");
 			fail("Should throw AssertionError!");
 		} catch (AssertionError e) {
-			assertEquals("\n  Unexpected method call sayFinalNative(\"world\"):", e.getMessage());
+			assertEquals("\n  Unexpected method call FinalDemo.sayFinalNative(\"world\"):", e.getMessage());
 		}
 	}
 }
